--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <img src="./assets/FotoWeb2.png" alt="">
                 </div>
                 <div class="links ">
-                    <a href="../assets/CV_CasasolaJoaquin (1).pdf" download="CV_CasasolaJoaquin (1).pdf" ><button class="btn-animado cv">Descargar CV 
+                    <a href="../assets/CV_CasasolaJoaquin.pdf" download="CV_CasasolaJoaquin.pdf" ><button class="btn-animado cv">Descargar CV 
                         <span></span>
                         <span></span>
                         <span></span>
