--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="programs">
-                    <h3>Programas</h3>
+                    <h3>Herramientas</h3>
                     <div class="editores">
                         <img class="VSC" src="./assets/visual-studio-code-1.svg" alt="">
                         <img class="VS" src="./assets/Visual_Studio_Icon_2022.svg" alt="">
