--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <title>Profolio - Joaquin Casasola</title>
+    <title>Portfolio | Joaquin Casasola</title>
 </head>
 <body>
     <div class="barra-lateral">
@@ -55,7 +55,7 @@
         <header>
             <div class="titulo">
                 <ion-icon id="cube" name="cube"></ion-icon>
-                <span>Porfolio<strong>_</strong></span>
+                <span>Portfolio<strong>_</strong></span>
             </div>
         </header>
         <section class="presentacion">
